--- a/charts/controller/crds/deployments.plural.sh_servicedeployments.yaml
+++ b/charts/controller/crds/deployments.plural.sh_servicedeployments.yaml
@@ -102,9 +102,15 @@ spec:
                       type: object
                     type: array
                 type: object
+              cluster:
+                description: Cluster is the handle of the target Cluster where this
+                  service will be deployed. Leave it empty to use the clusterRef field
+                  instead.
+                type: string
               clusterRef:
                 description: ClusterRef references the target Cluster where this service
-                  will be deployed.
+                  will be deployed. Leave it as an empty struct to use the cluster
+                  field instead.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -375,6 +381,10 @@ spec:
                         type: string
                     type: object
                     x-kubernetes-map-type: atomic
+                  repositoryUrl:
+                    description: RepositoryUrl references the GitRepository URL containing
+                      the service source code.
+                    type: string
                   url:
                     type: string
                   values:
@@ -616,6 +626,10 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              repositoryUrl:
+                description: RepositoryUrl references the GitRepository URL containing
+                  the service source code.
+                type: string
               sources:
                 description: Sources specify additional Git repositories to source
                   manifests from for multi-source deployments.
@@ -691,6 +705,10 @@ spec:
                           type: string
                       type: object
                       x-kubernetes-map-type: atomic
+                    repositoryUrl:
+                      description: RepositoryUrl references the GitRepository URL
+                        containing the source code.
+                      type: string
                   type: object
                 type: array
               syncConfig:
