--- a/plural/helm/console/crds/deployments.plural.sh_infrastructurestacks.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_infrastructurestacks.yaml
@@ -111,6 +111,11 @@ spec:
                       type: object
                     type: array
                 type: object
+              cluster:
+                description: Cluster is the handle of the target Cluster where this
+                  service will be deployed. Leave it empty to use the clusterRef field
+                  instead.
+                type: string
               clusterRef:
                 description: ClusterRef references the target Cluster where this stack
                   will be executed.
@@ -9723,7 +9728,7 @@ spec:
                 type: object
               repositoryRef:
                 description: RepositoryRef references the GitRepository containing
-                  the IaC source code.
+                  the IaC source code. Leave empty to use RepositoryUrl instead.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -9765,6 +9770,10 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              repositoryUrl:
+                description: RepositoryUrl references the GitRepository URL containing
+                  the service source code.
+                type: string
               scmConnectionRef:
                 description: ObjectReference contains enough information to let you
                   inspect or modify the referred object.
