--- a/plural/helm/console/crds/deployments.plural.sh_managednamespaces.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_managednamespaces.yaml
@@ -404,6 +404,10 @@ spec:
                             type: string
                         type: object
                         x-kubernetes-map-type: atomic
+                      repositoryUrl:
+                        description: RepositoryUrl references the GitRepository URL
+                          containing the service source code.
+                        type: string
                       url:
                         type: string
                       values:
@@ -580,6 +584,10 @@ spec:
                         type: string
                     type: object
                     x-kubernetes-map-type: atomic
+                  repositoryUrl:
+                    description: RepositoryUrl references the GitRepository URL containing
+                      the service source code.
+                    type: string
                   sources:
                     description: |-
                       Sources specify additional Git repositories or locations to source manifests from.
@@ -657,6 +665,10 @@ spec:
                               type: string
                           type: object
                           x-kubernetes-map-type: atomic
+                        repositoryUrl:
+                          description: RepositoryUrl references the GitRepository
+                            URL containing the source code.
+                          type: string
                       type: object
                     type: array
                   syncConfig:
