--- a/plural/helm/console/crds/deployments.plural.sh_prautomations.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_prautomations.yaml
@@ -603,6 +603,10 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              repositoryUrl:
+                description: RepositoryUrl references the GitRepository URL containing
+                  the automation source code.
+                type: string
               role:
                 enum:
                 - CLUSTER
