--- a/static/compatibilities/argo-cd.yaml
+++ b/static/compatibilities/argo-cd.yaml
@@ -3,6 +3,13 @@ git_url: https://github.com/argoproj/argo-cd
 release_url: https://github.com/argoproj/argo-cd/releases/tag/v{vsn}
 helm_repository_url: https://argoproj.github.io/argo-helm
 versions:
+- version: 3.2.1
+  kube: ['1.34', '1.33', '1.32']
+  requirements: []
+  incompatibilities: []
+  chart_version: 9.1.6
+  images: ['ecr-public.aws.com/docker/library/redis:8.2.2-alpine', 'ghcr.io/dexidp/dex:v2.44.0',
+    'quay.io/argoproj/argocd:v3.2.1']
 - version: 3.2.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
