--- a/static/compatibilities/kyverno.yaml
+++ b/static/compatibilities/kyverno.yaml
@@ -17,10 +17,7 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 3.5.0
-  images: ['bitnami/kubectl:1.32.3', 'busybox:1.35', 'reg.kyverno.io/kyverno/background-controller:v1.15.0',
-    'reg.kyverno.io/kyverno/cleanup-controller:v1.15.0', 'reg.kyverno.io/kyverno/kyverno-cli:v1.15.0',
-    'reg.kyverno.io/kyverno/kyverno:v1.15.0', 'reg.kyverno.io/kyverno/kyvernopre:v1.15.0',
-    'reg.kyverno.io/kyverno/reports-controller:v1.15.0']
+  images: []
 - version: 1.14.0
   kube: ['1.32', '1.31', '1.30', '1.29']
   requirements: []
