--- a/static/compatibilities/cilium.yaml
+++ b/static/compatibilities/cilium.yaml
@@ -1,7 +1,7 @@
 icon: https://avatars.githubusercontent.com/u/21054566?s=48&v=4
 release_url: https://github.com/cilium/cilium/releases/tag/{vsn}
 helm_repository_url: https://helm.cilium.io/
-helm_values: debug.verbose=null
+helm_values: debug.verbose=flow
 versions:
 - version: 1.18.4
   kube: ['1.34', '1.33', '1.32']
