--- a/charts/controller/crds/deployments.plural.sh_previewenvironmenttemplates.yaml
+++ b/charts/controller/crds/deployments.plural.sh_previewenvironmenttemplates.yaml
@@ -335,6 +335,9 @@ spec:
                         description: Ref is the Git reference (branch, tag, or commit)
                           to use.
                         type: string
+                      url:
+                        description: URL of the Git repository.
+                        type: string
                     required:
                     - folder
                     - ref
@@ -365,6 +368,9 @@ spec:
                           ref:
                             description: Ref is the Git reference (branch, tag, or
                               commit) to use.
+                            type: string
+                          url:
+                            description: URL of the Git repository.
                             type: string
                         required:
                         - folder
@@ -458,10 +464,6 @@ spec:
                             type: string
                         type: object
                         x-kubernetes-map-type: atomic
-                      repositoryUrl:
-                        description: RepositoryUrl references the GitRepository URL
-                          containing the service source code.
-                        type: string
                       url:
                         type: string
                       values:
@@ -638,10 +640,6 @@ spec:
                         type: string
                     type: object
                     x-kubernetes-map-type: atomic
-                  repositoryUrl:
-                    description: RepositoryUrl references the GitRepository URL containing
-                      the service source code.
-                    type: string
                   sources:
                     description: |-
                       Sources specify additional Git repositories or locations to source manifests from.
@@ -666,6 +664,9 @@ spec:
                             ref:
                               description: Ref is the Git reference (branch, tag,
                                 or commit) to use.
+                              type: string
+                            url:
+                              description: URL of the Git repository.
                               type: string
                           required:
                           - folder
@@ -719,10 +720,6 @@ spec:
                               type: string
                           type: object
                           x-kubernetes-map-type: atomic
-                        repositoryUrl:
-                          description: RepositoryUrl references the GitRepository
-                            URL containing the source code.
-                          type: string
                       type: object
                     type: array
                   syncConfig:
