--- a/charts/controller/crds/deployments.plural.sh_stackdefinitions.yaml
+++ b/charts/controller/crds/deployments.plural.sh_stackdefinitions.yaml
@@ -83,6 +83,9 @@ spec:
                             description: Ref is the Git reference (branch, tag, or
                               commit) to use.
                             type: string
+                          url:
+                            description: URL of the Git repository.
+                            type: string
                         required:
                         - folder
                         - ref
