--- a/plural/helm/console/crds/deployments.plural.sh_infrastructurestacks.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_infrastructurestacks.yaml
@@ -194,6 +194,9 @@ spec:
                             description: Ref is the Git reference (branch, tag, or
                               commit) to use.
                             type: string
+                          url:
+                            description: URL of the Git repository.
+                            type: string
                         required:
                         - folder
                         - ref
@@ -432,6 +435,9 @@ spec:
                   ref:
                     description: Ref is the Git reference (branch, tag, or commit)
                       to use.
+                    type: string
+                  url:
+                    description: URL of the Git repository.
                     type: string
                 required:
                 - folder
@@ -9770,10 +9776,6 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-              repositoryUrl:
-                description: RepositoryUrl references the GitRepository URL containing
-                  the service source code.
-                type: string
               scmConnectionRef:
                 description: ObjectReference contains enough information to let you
                   inspect or modify the referred object.
