--- a/plural/helm/console/crds/deployments.plural.sh_sentinels.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_sentinels.yaml
@@ -90,6 +90,9 @@ spec:
                                   description: Ref is the Git reference (branch, tag,
                                     or commit) to use.
                                   type: string
+                                url:
+                                  description: URL of the Git repository.
+                                  type: string
                               required:
                               - folder
                               - ref
@@ -9747,10 +9750,6 @@ spec:
                                   type: string
                               type: object
                               x-kubernetes-map-type: atomic
-                            repositoryUrl:
-                              description: RepositoryUrl references the GitRepository
-                                URL containing the service source code.
-                              type: string
                             tags:
                               additionalProperties:
                                 type: string
@@ -9940,6 +9939,9 @@ spec:
                     description: Ref is the Git reference (branch, tag, or commit)
                       to use.
                     type: string
+                  url:
+                    description: URL of the Git repository.
+                    type: string
                 required:
                 - folder
                 - ref
@@ -10060,10 +10062,6 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-              repositoryUrl:
-                description: RepositoryUrl references the GitRepository URL containing
-                  the source code.
-                type: string
             type: object
           status:
             properties:
