--- a/plural/helm/console/crds/deployments.plural.sh_servicedeployments.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_servicedeployments.yaml
@@ -260,6 +260,9 @@ spec:
                     description: Ref is the Git reference (branch, tag, or commit)
                       to use.
                     type: string
+                  url:
+                    description: URL of the Git repository.
+                    type: string
                 required:
                 - folder
                 - ref
@@ -288,6 +291,9 @@ spec:
                       ref:
                         description: Ref is the Git reference (branch, tag, or commit)
                           to use.
+                        type: string
+                      url:
+                        description: URL of the Git repository.
                         type: string
                     required:
                     - folder
@@ -381,10 +387,6 @@ spec:
                         type: string
                     type: object
                     x-kubernetes-map-type: atomic
-                  repositoryUrl:
-                    description: RepositoryUrl references the GitRepository URL containing
-                      the service source code.
-                    type: string
                   url:
                     type: string
                   values:
@@ -626,10 +628,6 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
-              repositoryUrl:
-                description: RepositoryUrl references the GitRepository URL containing
-                  the service source code.
-                type: string
               sources:
                 description: Sources specify additional Git repositories to source
                   manifests from for multi-source deployments.
@@ -652,6 +650,9 @@ spec:
                         ref:
                           description: Ref is the Git reference (branch, tag, or commit)
                             to use.
+                          type: string
+                        url:
+                          description: URL of the Git repository.
                           type: string
                       required:
                       - folder
@@ -705,10 +706,6 @@ spec:
                           type: string
                       type: object
                       x-kubernetes-map-type: atomic
-                    repositoryUrl:
-                      description: RepositoryUrl references the GitRepository URL
-                        containing the source code.
-                      type: string
                   type: object
                 type: array
               syncConfig:
