add cluster to pr automation

--- a/charts/controller/crds/deployments.plural.sh_prautomations.yaml
+++ b/charts/controller/crds/deployments.plural.sh_prautomations.yaml
@@ -156,6 +156,11 @@ spec:
                     type: string
                 type: object
                 x-kubernetes-map-type: atomic
+              cluster:
+                description: Cluster is the handle of the target Cluster where this
+                  service will be deployed. Leave it empty to use the clusterRef field
+                  instead.
+                type: string
               clusterRef:
                 description: ClusterRef references a specific cluster that this PR
                   operates on.
