implement json pr automation type

--- a/charts/controller/crds/deployments.plural.sh_customstackruns.yaml
+++ b/charts/controller/crds/deployments.plural.sh_customstackruns.yaml
@@ -139,6 +139,7 @@ spec:
                       - STRING
                       - INT
                       - BOOL
+                      - JSON
                       - PASSWORD
                       - ENUM
                       - CLUSTER
