--- a/charts/controller/crds/deployments.plural.sh_prautomations.yaml
+++ b/charts/controller/crds/deployments.plural.sh_prautomations.yaml
@@ -280,6 +280,7 @@ spec:
                       - STRING
                       - INT
                       - BOOL
+                      - JSON
                       - PASSWORD
                       - ENUM
                       - CLUSTER
