--- a/plural/helm/console/crds/deployments.plural.sh_serviceaccounts.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_serviceaccounts.yaml
@@ -99,8 +99,8 @@ spec:
                     api:
                       description: |-
                         API specifies a single Console API endpoint name that this service account
-                        should be scoped to, such as 'updateServiceDeployment' or 'createCluster'.
-                      example: updateServiceDeployment
+                        should be scoped to, such as 'service.write' or 'cluster.read'.
+                      example: service.write
                       type: string
                     apis:
                       description: |-
